Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.8.0, 5.15.2
-
3d71c4b740d23d5c3f380f495990f35ea17dc2a0 (qt/qtbase/dev)
Description
Context menu events are not generated for mouse presses for any other type of window except widget windows. For example, when embedding QOpenGLWindow or QQuickView through QWidget::createWindowContainer, the event is never generated for those windows. Looks like that is because they are generated from mouse press events only in QWidgetWindow::handleMouseEvent() at src/widgets/kernel/qwidgetwindow.cpp:563 .
Context menu events from keyboard do work.